[project]
name = "osnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "chardet>=7.1.0",
    "cython>=3.2.4",
    "flake8>=7.3.0",
    "future>=1.0.0",
    "gdown>=5.2.1",
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "isort==4.3.21",
    "matplotlib>=3.5.8",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.92",
    "pillow>=11.0.0",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "tb-nightly>=2.21.0a20251023",
    "yacs>=0.1.8",
    "yapf>=0.43.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["osnet*"]